[tool.poetry]
name = "option-vix-correlation"
version = "0.1.0"
description = "Analysis of VIX and option price correlation."
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
pandas = "^2.2.2"
yfinance = "^0.2.40"

[tool.poetry.group.dev.dependencies]
notebook = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"